<resources>
    <!-- Activity labels and App Name -->
    <string name="app_name" translatable="false">DCC-Controller</string>
    <string name="label_activity_console">Console</string>
    <string name="label_activity_controller_config">Configure</string>
    <string name="label_activity_loco_config">Edit Locos</string>
    <string name="label_loco_add">Add Loco</string>

    <!--LauncherActivity item titles -->
    <string name="item_settings">Preferences</string>
    <string name="item_console">CBUS-Console</string>
    <string name="item_locoList">Edit Locos</string>

    <!-- LauncherActivity strings -->
    <string name="action_loadLast">Last used</string>
    <string name="input_ipEntry">Hostname</string>
    <string name="input_portEntry">Port</string>
    <string name="cp_Start" translatable="false">Start</string>

    <!-- Console Strings -->
    <string name="title_raw">All incoming</string>
    <string name="title_processed">Interpreted</string>
    <string name="info_event" translatable="false">Event:</string>
    <string name="info_data" translatable="false">Data:</string>
    <string name="input_event" translatable="false">Event</string>
    <string name="input_dat1" translatable="false">D1</string>
    <string name="input_dat2" translatable="false">D2</string>
    <string name="input_dat3" translatable="false">D3</string>
    <string name="input_dat4" translatable="false">D4</string>
    <string name="input_dat5" translatable="false">D5</string>
    <string name="input_dat6" translatable="false">D6</string>
    <string name="input_dat7" translatable="false">D7</string>
    <string name="contentDescription_arrow">Arrow right</string>
    <string name="input_rawMessage">Message</string>
    <string name="cp_send">Send frame</string>
    <string name="action_playPause" translatable="false">Play/Pause</string>
    <string name="action_clear">Clear</string>

    <!-- Strings for the Menu-->
    <string name="action_light">Light</string>
    <string name="action_config">Configure</string>
    <string name="action_reset" translatable="false">Reset</string>
    <string name="action_reconnect">Reconnect</string>
    <string name="action_estop">Emergency stop</string>
    <string name="action_stop" translatable="false">Stop</string>
    <string name="action_exit">Exit</string>

    <!-- MainActivity -->
    <string name="tab_cab_1" translatable="false">Cab 1</string>
    <string name="tab_cab_2" translatable="false">Cab 2</string>
    <string name="tab_cab_3" translatable="false">Cab 3</string>
    <string name="action_idle" translatable="false">Idle</string>
    <string name="action_f0" translatable="false">F0</string>
    <string name="action_f1" translatable="false">F1</string>
    <string name="action_f2" translatable="false">F2</string>
    <string name="action_f3" translatable="false">F3</string>
    <string name="action_f4" translatable="false">F4</string>
    <string name="action_f5" translatable="false">F5</string>
    <string name="action_f6" translatable="false">F6</string>
    <string name="action_f7" translatable="false">F7</string>
    <string name="action_f8" translatable="false">F8</string>
    <string name="action_f9" translatable="false">F9</string>
    <string name="label_switches">Switches</string>
    <string name="label_sections">Sections</string>
    <string name="messageString_estop">Stopped</string>


    <!-- Config headers -->
    <string name="accessory_header">Accessory</string>

    <!-- Config items -->
    <string name="title_is_accessory_on">Control accessory</string>
    <string name="summary_is_accessory_on">Control additional elements</string>

    <!--Loco Config strings-->
    <string name="contentDescription_add">Add loco</string>
    <string name="contentDescription_save">Save</string>
    <string name="contentDescription_edit">Edit Loco</string>
    <string name="contentDescription_delete">Delete</string>

    <string name="title_confirm_deletion">Confirm deletion</string>
    <string name="message_confirm_deletion_1">Are you sure deleting\u0020</string>
    <string name="message_confirm_deletion_2">\?</string>
    <string name="positive_button_del">Yes</string>
    <string name="negative_button_del">No</string>

    <string name="positive_button_edit">Save</string>
    <string name="negative_button_edit">Cancel</string>

    <string name="input_locoName">Name/Designation</string>
    <string name="input_locoAddress">Address</string>
</resources>
