<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

    </com.google.android.material.appbar.AppBarLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/fab_margin"
        android:src="@drawable/ic_baseline_directions_railway_24"/>

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:foregroundTint="@color/colorTitle"
        app:popupTheme="@style/AppTheme.PopupOverlay" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="?attr/actionBarSize">

        <Button
            android:id="@+id/loadLast"
            android:layout_width="147dp"
            android:layout_height="120dp"
            android:layout_gravity="end"
            android:text="@string/action_loadLast"
            android:backgroundTint="@color/colorMenu_2"
            android:textSize="12sp"/>

        <EditText
            android:id="@+id/ipEntry"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginEnd="147dp"
            android:hint="@string/input_ipEntry"
            android:inputType="textNoSuggestions"
            android:singleLine="true"
            android:autofillHints="@string/input_ipEntry"/>

        <EditText
            android:id="@+id/portEntry"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="60dp"
            android:layout_marginEnd="147dp"
            android:hint="@string/input_portEntry"
            android:inputType="number"
            android:singleLine="true"
            android:autofillHints="@string/input_portEntry" />

        <EditText
            android:id="@+id/devIdEntry"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="120dp"
            android:hint="@string/input_devIdEntry"
            android:inputType="number"
            android:singleLine="true"
            android:autofillHints="@string/input_devIdEntry" />
    </FrameLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>